--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "CodeShell VSCode Extension",
   "description": "Coding with CodeShell LLM",
   "publisher": "WisdomShell",
-  "version": "0.0.2",
+  "version": "0.1.2",
   "icon": "assets/logo.png",
   "keywords": [
     "code-suggestion",
@@ -24,6 +24,7 @@
     "onStartupFinished"
   ],
   "main": "./dist/extension.js",
+  "l10n": "./l10n",
   "contributes": {
     "configuration": {
       "title": "CodeShell",
@@ -35,11 +36,24 @@
           "order": 1
         },
         "CodeShell.RunEnvForLLMs": {
-          "description": "The environment that should be used for running LLMs",
+          "description": "The environment that should be used for running LLMs.",
           "default": "CPU with llama.cpp",
-          "enum": ["CPU with llama.cpp", "GPU with TGI toolkit"],
+          "enum": [
+            "CPU with llama.cpp",
+            "GPU with TGI toolkit"
+          ],
           "type": "string",
           "order": 2
+        },
+        "CodeShell.MultiLanguage": {
+          "description": "Choice your preferred language.",
+          "default": "English",
+          "enum": [
+            "English",
+            "中文"
+          ],
+          "type": "string",
+          "order": 3
         },
         "CodeShell.AutoTriggerCompletion": {
           "description": "Whether or not to automatically trigger completion when typing.",
@@ -50,21 +64,36 @@
         "CodeShell.AutoCompletionDelay": {
           "description": "The delay in seconds before automatic code completion triggers.",
           "type": "number",
-          "enum": [1,2,3],
+          "enum": [
+            1,
+            2,
+            3
+          ],
           "default": 1,
           "order": 7
         },
         "CodeShell.CompletionMaxTokens": {
           "description": "Maximum number of tokens for which suggestions will be displayed",
           "type": "number",
-          "enum": [64,128,256,512,1024],
+          "enum": [
+            64,
+            128,
+            256,
+            512,
+            1024
+          ],
           "default": 64,
           "order": 8
         },
         "CodeShell.ChatMaxTokens": {
           "description": "Maximum number of tokens for which chat messages will be displayed",
           "type": "number",
-          "enum": [1024,2048,4096,8192],
+          "enum": [
+            1024,
+            2048,
+            4096,
+            8192
+          ],
           "default": 2048,
           "order": 9
         }
@@ -81,47 +110,47 @@
     "commands": [
       {
         "command": "codeshell.auto_completion_enable",
-        "title": "启用 自动触发补全",
+        "title": "%codeshell.auto_completion_enable.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.auto_completion_disable",
-        "title": "停用 自动触发补全",
+        "title": "%codeshell.auto_completion_disable.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.explain_this_code",
-        "title": "解释 这段代码",
+        "title": "%codeshell.explain_this_code.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.improve_this_code",
-        "title": "优化 这段代码",
+        "title": "%codeshell.improve_this_code.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.clean_this_code",
-        "title": "清理 这段代码",
+        "title": "%codeshell.clean_this_code.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.generate_comment",
-        "title": "生成 注释",
+        "title": "%codeshell.generate_comment.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.generate_unit_test",
-        "title": "生成 单元测试",
+        "title": "%codeshell.generate_unit_test.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.check_performance",
-        "title": "检查 性能问题",
+        "title": "%codeshell.check_performance.title%",
         "category": "codeshell"
       },
       {
         "command": "codeshell.check_security",
-        "title": "检查 安全性问题",
+        "title": "%codeshell.check_security.title%",
         "category": "codeshell"
       }
     ],
@@ -223,6 +252,7 @@
     "@types/vscode": "^1.83.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/l10n-dev": "^0.0.18",
     "@vscode/test-electron": "^2.3.2",
     "@vscode/vsce": "^2.21.1",
     "eslint": "^8.41.0",
@@ -234,8 +264,10 @@
     "webpack-cli": "^5.1.1"
   },
   "dependencies": {
+    "@vscode/l10n": "^0.0.10",
     "abort-controller": "^3.0.0",
     "eventsource-parser": "^1.1.1",
+    "l10n": "^0.2.4",
     "nanoid": "^5.0.1",
     "node-fetch": "^3.3.2",
     "openai": "^3.1.0"
