--- a/package.json
+++ b/package.json
@@ -259,5 +259,9 @@
     "eventsource-parser": "^1.1.1",
     "node-fetch": "^3.3.2",
     "openai": "^3.1.0"
-  }
+  },
+  "extensionKind": [
+    "ui",
+    "workspace"
+  ]
 }
